[package]
name = "apt"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo", "string"] }
num_cpus = "1.16"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1